# AVRemote

./: .gitignore  AUTHORS  ChangeLog  Makefile.in  README  TODO.org  config.h  config.h.in  configure  configure.ac
contrib/: medianav.sh  upnp-cmd.php  upnp.sh
src/: Makefile.am  Makefile.in  avremote.c  avremote.h  cmdline.c  discover.c  discover.h  parsers.c  parsers.h
src/upnp/: minisoap.c  miniwget.c
